<resources>
    <string name="app_name">KioDo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trainings">Trainings</string>
    <string name="statistics">Statistics</string>
    <string name="back_button_name">Back</string>
    <string name="back_button_description">Return back button</string>
    <string name="training_screen_title">Training</string>
    <string name="training_up_next_title">Up next</string>
    <string name="next_exercise_button_text">Next</string>
    <string name="training_name_not_found_toast_text">Something went wrong! Try again.</string>
    <string name="equipment_title">Equipment:</string>
    <string name="description_title">Description:</string>
    <string name="create_your_first_training_text">Create your first training</string>
    <string name="create_your_first_exercise_text">Create your first exercise</string>
    <string name="profile">Profile</string>
    <string name="number_of_exercises">Number of exercises:</string>
    <string name="done">done</string>
    <string name="rest_between_exercises_hint">Rest Between Exercises</string>
    <string name="training_name_hint">Training Name</string>
    <string name="add_new_exercise_to_training">Add new exercise to training</string>
    <string name="train_editing_exercise_list">Exercises</string>
    <string name="exercise_name_hint">Exercise name</string>
    <string name="number_of_repeats_hint">Number of repeats</string>
    <string name="equipment_hint">Equipment(optional)</string>
    <string name="description_hint">Description(optional)</string>
    <string name="rest_between_repeats_hint">Rest between repeats</string>
    <string name="invalid_exercise_data">Fill required fields and try again</string>
    <string name="invalid_training_data">Correct fields and select at least one exercise to save</string>
    <string name="create_new_exercise_description">Create new exercise</string>
    <string name="equipment_card_title">Equipment:</string>
    <string name="favorite_training">Favorite training</string>
    <string name="favorite_exercise">Favorite exercise</string>
    <string name="trainings_done">Trainings done</string>
    <string name="last_exercise_button_text">Done</string>
</resources>