<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".ui.fragment.TrainingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/training_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/upper_menu"
            app:title="@string/training_screen_title"
            app:titleCentered="true">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/training_p_par"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/training_app_bar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/exercise_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/next_exercise_button"
        app:layout_constraintTop_toBottomOf="@id/training_p_par"
        app:layout_constraintVertical_weight="12">

        <LinearLayout
            android:id="@+id/current_exercise_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/exercise_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/repeats_count"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/equipment_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/equipment_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/equipment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="5"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/description_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="5"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_exercise_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/next_exercise_button_text"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@id/recycle_title"
        app:layout_constraintTop_toBottomOf="@id/exercise_frame"
        app:layout_constraintVertical_weight="2" />


    <TextView
        android:id="@+id/recycle_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elegantTextHeight="true"
        android:text="@string/training_up_next_title"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/training_screen_recycle_view"
        app:layout_constraintTop_toBottomOf="@id/next_exercise_button"
        app:layout_constraintVertical_weight="1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/training_screen_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_title"
        app:layout_constraintVertical_weight="8" />

</androidx.constraintlayout.widget.ConstraintLayout>